--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3636,7 +3636,7 @@
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: cover;
+		background-size: cover fixed;
 		text-align: center;
 	}
 
